# libcx

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  build.zig  build.zig.zon
include/cx/: alloc.h  arena.h  arr.h  array.h  array_list.h  assert.h  defer.h  either.h  fmt.h  io.h  linux.h  log.h  math.h  maybe.h  mem.h  nums.h  program.h  slice.h  thread.h  time.h  windows.h
include/cx/io/: dir.h  file.h
include/cx/math/: matrix.h  vector.h
include/cx/windows/: time.h
include/std/: alloc.h  arena.h  array.h  array_list.h  defer.h  log.h  math.h  mem.h  nums.h  slice.h
src/: alloc.cpp  arena.cpp  file.cpp  io.cpp  math.cpp  program.cpp
src/linux/: io.cpp
src/linux/io/: file.cpp
src/windows/: io.cpp  program.cpp  thread.cpp  time.cpp
src/windows/io/: dir.cpp  file.cpp
tests/: alloc.cpp  arena.cpp  array_list.cpp  either.cpp  io.cpp  math.cpp  mem.cpp  time.cpp
